Fix more feedback

--- a/src/_includes/partials/header.html
+++ b/src/_includes/partials/header.html
@@ -138,7 +138,7 @@
 				href="/"
 				class="btn btn-primary mt-10 text-lg font-bold"
 			>
-				Plan jouw afspraak online
+				<span class="btn-content"> Plan jouw afspraak online </span>
 			</a>
 		</div>
 
@@ -326,8 +326,9 @@
 			<a
 				href="/"
 				class="btn btn-primary mt-12 text-lg font-bold"
-				>Plan jouw afspraak online</a
 			>
+				<span class="btn-content"> Plan jouw afspraak online </span>
+			</a>
 		</div>
 	</div>
 </div>
