--- a/src/pages/about.njk
+++ b/src/pages/about.njk
@@ -4,10 +4,12 @@ permalink: /about/
 layout: "layouts/base.html"
 ---
 
-<div
-	class="relative overflow-hidden"
->
-<img src="/assets/img/bg-cta-home.jpg" class="w-full object-cover object-[50%_8%] h-[394px] sm:h-[440px] md:h-[490px] lg:h-[550px] xl:h-[738px]" alt="">
+<div class="relative overflow-hidden">
+	<img
+		src="/assets/img/bg-cta-home.jpg"
+		class="h-[394px] w-full object-cover object-[50%_8%] sm:h-[440px] md:h-[490px] lg:h-[550px] xl:h-[738px]"
+		alt=""
+	/>
 	<div class="absolute -bottom-3 left-auto right-0 z-20 w-[125%] sm:w-auto md:-bottom-6 md:left-0 md:right-auto">
 		<img
 			src="/assets/img/section-shape-white.svg"
@@ -17,7 +19,9 @@ layout: "layouts/base.html"
 	</div>
 </div>
 <div class="relative overflow-hidden">
-	<div class="absolute -left-6 top-[60rem] sm:top-[55rem] lg:top-[62rem] xl:top-[42rem] 2xl:top-[38rem]">
+	<div
+		class="absolute -left-6 top-[65rem] lg:!top-[62rem] xl:!top-[42rem] 2xl:!top-[38rem] [@media(min-width:350px)]:top-[60rem] [@media(min-width:375px)]:top-[55rem] [@media(min-width:550px)]:top-[52rem]"
+	>
 		<img
 			src="/assets/img/kiss-pink-dark.png"
 			class="h-24 rotate-[-25deg] transform sm:h-28 xl:h-36 2xl:h-[10.5rem]"
@@ -54,12 +58,9 @@ layout: "layouts/base.html"
 							<a
 								href="/"
 								class="btn btn-primary border border-pink-medium text-center"
-								>
-								<span class="btn-content md:!px-10">
-									Plan jouw afspraak online
-								</span>
-								</a
 							>
+								<span class="btn-content md:!px-10"> Plan jouw afspraak online </span>
+							</a>
 						</div>
 					</div>
 					<div class="flex w-full gap-3 md:w-[96%] md:gap-8 lg:gap-[51px] xl:w-[55%] 2xl:w-1/2">
@@ -109,52 +110,52 @@ layout: "layouts/base.html"
 						<span>
 							<img
 								src="/assets/img/madeline.jpg"
-								class="h-[250px] w-full rounded-[15px] md:rounded-[25px] object-cover object-top md:h-[280px] lg:h-[200px] xl:h-[250px]"
+								class="h-[250px] w-full rounded-[15px] object-cover object-[100%_20%] md:h-[280px] md:rounded-[25px] lg:h-[200px] xl:h-[250px]"
 								alt="madeline photo - team member"
 							/>
 						</span>
 						<span class="block pt-2 md:pt-3">
-							<span class="text-lg block font-bold">Madeline</span>
-							<span class="text-lg block">Wimper styliste </span>
+							<span class="block text-lg font-bold">Madeline</span>
+							<span class="block text-lg">Wimper styliste </span>
 						</span>
 					</div>
 					<div>
 						<span>
 							<img
 								src="/assets/img/manon.jpg"
-								class="h-[250px] w-full rounded-[15px] md:rounded-[25px] object-cover object-top md:h-[280px] lg:h-[200px] xl:h-[250px]"
+								class="h-[250px] w-full rounded-[15px] object-cover object-[100%_20%] md:h-[280px] md:rounded-[25px] lg:h-[200px] xl:h-[250px]"
 								alt="manon photo - team member"
 							/>
 						</span>
 						<span class="block pt-2 md:pt-3">
-							<span class="text-lg block font-bold">Manon</span>
-							<span class="text-lg block">Pmu artist</span>
+							<span class="block text-lg font-bold">Manon</span>
+							<span class="block text-lg">Pmu artist</span>
 						</span>
 					</div>
 					<div>
 						<span>
 							<img
 								src="/assets/img/claudia.jpg"
-								class="h-[250px] w-full rounded-[15px] md:rounded-[25px] object-cover object-top md:h-[280px] lg:h-[200px] xl:h-[250px]"
+								class="h-[250px] w-full rounded-[15px] object-cover object-[100%_20%] md:h-[280px] md:rounded-[25px] lg:h-[200px] xl:h-[250px]"
 								alt="claudia photo - team member"
 							/>
 						</span>
 						<span class="block pt-2 md:pt-3">
-							<span class="text-lg block font-bold">Claudia Jacobs</span>
-							<span class="text-lg block">Fillerexpert en CEO</span>
+							<span class="block text-lg font-bold">Claudia Jacobs</span>
+							<span class="block text-lg">Fillerexpert en CEO</span>
 						</span>
 					</div>
 					<div>
 						<span>
 							<img
 								src="/assets/img/omaima.jpg"
-								class="h-[250px] w-full rounded-[15px] md:rounded-[25px] object-cover object-top md:h-[280px] lg:h-[200px] xl:h-[250px]"
+								class="h-[250px] w-full rounded-[15px] object-cover object-[100%_20%] md:h-[280px] md:rounded-[25px] lg:h-[200px] xl:h-[250px]"
 								alt="omaima photo - team member"
 							/>
 						</span>
 						<span class="block pt-2 md:pt-3">
-							<span class="text-lg block font-bold">Omaima</span>
-							<span class="text-lg block">Chirurg en cosmetische arts</span>
+							<span class="block text-lg font-bold">Omaima</span>
+							<span class="block text-lg">Chirurg en cosmetische arts</span>
 						</span>
 					</div>
 				</div>
