--- a/src/pages/home.njk
+++ b/src/pages/home.njk
@@ -24,7 +24,10 @@ layout: "layouts/base.html"
 		/>
 	</div>
 	<div class="container relative z-40 pb-16 md:pb-24">
-		<a href="#about-section" class="absolute bottom-9 right-0 z-30 hidden pr-4 lg:block ">
+		<a
+			href="#about-section"
+			class="absolute bottom-9 right-0 z-30 hidden pr-4 lg:block"
+		>
 			<img
 				src="/assets/img/icon-arrow-down.png"
 				class="h-12 xl:h-[70px]"
@@ -43,10 +46,11 @@ layout: "layouts/base.html"
 	</div>
 </div>
 
-<div class="relative bg-off-white" id="about-section">
-	<div
-		class="green-kiss"
-	>
+<div
+	class="relative bg-off-white"
+	id="about-section"
+>
+	<div class="green-kiss">
 		<img
 			src="/assets/img/kiss-green.png"
 			class="h-[91px] rotate-[-15deg] transform md:h-[110px] md:rotate-0 lg:h-[8.75rem]"
@@ -111,8 +115,8 @@ layout: "layouts/base.html"
 				<div class="mt-10 md:mt-7">
 					<a
 						href="/"
-						class="btn btn-primary border border-pink-medium text-center w-full md:w-auto"
-						><span class="btn-content md:!px-10">Plan jouw afspraak online</span></a
+						class="btn btn-primary w-full border border-pink-medium text-center md:w-auto"
+						><span class="btn-content !text-[17px] md:!px-10 md:!text-lg">Plan jouw afspraak online</span></a
 					>
 				</div>
 			</div>
@@ -174,7 +178,7 @@ layout: "layouts/base.html"
 				>
 					<div class="w-full md:w-1/2 xl:-ml-32 xl:w-[48%]">
 						<div
-							class="rounded-[25px] md:rounded-[40px] bg-white px-6 py-5 shadow-[5px_5px_25px_rgba(240,186,212,0.18)] md:px-7 md:py-7 xl:px-9 xl:py-[2.375rem]"
+							class="rounded-[25px] bg-white px-6 py-5 shadow-[5px_5px_25px_rgba(240,186,212,0.18)] md:rounded-[40px] md:px-7 md:py-7 xl:px-9 xl:py-[2.375rem]"
 						>
 							<div class="flex items-center gap-2 md:gap-4 lg:gap-5">
 								<span class="block shrink-0">
@@ -192,7 +196,7 @@ layout: "layouts/base.html"
 					</div>
 					<div class="w-full md:w-1/2 xl:w-[52%]">
 						<div
-							class="rounded-[25px] md:rounded-[40px] bg-white px-6 py-5 shadow-[5px_5px_25px_rgba(240,186,212,0.18)] md:px-7 md:py-7 xl:px-9 xl:py-[2.375rem]"
+							class="rounded-[25px] bg-white px-6 py-5 shadow-[5px_5px_25px_rgba(240,186,212,0.18)] md:rounded-[40px] md:px-7 md:py-7 xl:px-9 xl:py-[2.375rem]"
 						>
 							<div class="flex items-center gap-2 md:gap-4 lg:gap-5">
 								<span class="block shrink-0">
@@ -214,7 +218,7 @@ layout: "layouts/base.html"
 				>
 					<div class="w-full md:w-1/2 xl:w-[48%]">
 						<div
-							class="rounded-[25px] md:rounded-[40px] bg-white px-6 py-5 shadow-[5px_5px_25px_rgba(240,186,212,0.18)] md:px-7 md:py-7 xl:px-9 xl:py-[2.375rem]"
+							class="rounded-[25px] bg-white px-6 py-5 shadow-[5px_5px_25px_rgba(240,186,212,0.18)] md:rounded-[40px] md:px-7 md:py-7 xl:px-9 xl:py-[2.375rem]"
 						>
 							<div class="flex items-center gap-2 md:gap-4 lg:gap-5">
 								<span class="block shrink-0">
@@ -232,7 +236,7 @@ layout: "layouts/base.html"
 					</div>
 					<div class="w-full md:w-1/2 xl:-mr-48 xl:w-[52%]">
 						<div
-							class="rounded-[25px] lg:rounded-[40px] bg-white px-6 py-5 shadow-[5px_5px_25px_rgba(240,186,212,0.18)] md:px-7 md:py-7 xl:px-9 xl:py-[2.375rem]"
+							class="rounded-[25px] bg-white px-6 py-5 shadow-[5px_5px_25px_rgba(240,186,212,0.18)] md:px-7 md:py-7 lg:rounded-[40px] xl:px-9 xl:py-[2.375rem]"
 						>
 							<div class="flex items-center gap-2 md:gap-4 lg:gap-5">
 								<span class="block shrink-0">
@@ -328,7 +332,8 @@ layout: "layouts/base.html"
 						<a
 							href="/"
 							class="btn btn-primary w-full !bg-[#e5055b] text-center text-[17px] md:text-lg"
-							> <span class="btn-content md:!px-10">Plan jouw afspraak online</span></a
+						>
+							<span class="btn-content !text-[17px] md:!px-10 md:!text-lg">Plan jouw afspraak online</span></a
 						>
 					</div>
 				</div>
@@ -354,7 +359,8 @@ layout: "layouts/base.html"
 						<a
 							href="/"
 							class="btn btn-primary w-full !bg-[#e5055b] text-center text-[17px] md:text-lg"
-							> <span class="btn-content md:!px-10">Plan jouw afspraak online</span></a
+						>
+							<span class="btn-content !text-[17px] md:!px-10 md:!text-lg">Plan jouw afspraak online</span></a
 						>
 					</div>
 				</div>
@@ -383,7 +389,8 @@ layout: "layouts/base.html"
 						<a
 							href="/"
 							class="btn btn-primary w-full !bg-[#e5055b] text-center text-[17px] md:text-lg"
-							> <span class="btn-content md:!px-10">Plan jouw afspraak online</span></a
+						>
+							<span class="btn-content !text-[17px] md:!px-10 md:!text-lg">Plan jouw afspraak online</span></a
 						>
 					</div>
 				</div>
@@ -410,8 +417,9 @@ layout: "layouts/base.html"
 					<div class="mt-6">
 						<a
 							href="/"
-							class="btn btn-primary w-full !bg-[#e5055b] text-center text-[17px] md:text-lg"
-							> <span class="btn-content md:!px-10">Plan jouw afspraak online</span></a
+							class="btn btn-primary w-full !bg-[#e5055b] text-center"
+						>
+							<span class="btn-content !text-[17px] md:!px-10 md:!text-lg">Plan jouw afspraak online</span></a
 						>
 					</div>
 				</div>
@@ -420,7 +428,7 @@ layout: "layouts/base.html"
 		<div class="flex justify-center sm:justify-end">
 			<a
 				href="/"
-				class="btn btn-secondary mt-3.5 w-full md:w-auto  text-center"
+				class="btn btn-secondary mt-3.5 w-full text-center md:w-auto"
 				><span class="btn-content !px-12">Bekijk alle behandelingen</span></a
 			>
 		</div>
@@ -448,8 +456,8 @@ layout: "layouts/base.html"
 			</span>
 		</div>
 		<div class="w-full xl:w-2/5 2xl:w-[37%] 2xl:pl-10">
-			<span class="flex justify-center md:justify-start items-baseline pt-6 md:pt-[52px]">
-				<span class="relative block -mr-5 md:mr-0">
+			<span class="flex items-baseline justify-center pt-6 md:justify-start md:pt-[52px]">
+				<span class="relative -mr-5 block md:mr-0">
 					<h3 class="text-h-4 md:text-h-3 2xl:text-h-2 font-bold text-pink">Happy customers!</h3>
 				</span>
 				<span class="block pb-4">
@@ -460,7 +468,7 @@ layout: "layouts/base.html"
 					/>
 				</span>
 			</span>
-			<span class="-mb-15 mt-8 block text-[98px] leading-none text-lime text-center md:text-left">“</span>
+			<span class="-mb-15 mt-8 block text-center text-[98px] leading-none text-lime md:text-left">“</span>
 			<div class="swiper pb-20 text-center md:text-left">
 				<div class="swiper-wrapper">
 					<div class="swiper-slide">
@@ -471,7 +479,7 @@ layout: "layouts/base.html"
 						</p>
 						<span class="block pt-6 text-lg/[24px] font-bold text-pink lg:pt-8">
 							Romy
-							<span class="block font-normal text-black/70 italic"> Google reviews </span>
+							<span class="block font-normal italic text-black/70"> Google reviews </span>
 						</span>
 					</div>
 					<div class="swiper-slide">
@@ -508,17 +516,17 @@ layout: "layouts/base.html"
 						</span>
 					</div>
 				</div>
-				<div class="swiper-pagination flex justify-center md:justify-start items-center gap-5"></div>
+				<div class="swiper-pagination flex items-center justify-center gap-5 md:justify-start"></div>
 			</div>
 		</div>
 	</div>
 </div>
 
 <div class="md:effect-top-curve relative overflow-hidden bg-off-white md:pt-16">
-	<div class="absolute -bottom-3 right-0 md:right-auto left-auto md:left-0 z-20 w-[125%] sm:w-auto md:-bottom-6">
+	<div class="absolute -bottom-3 left-auto right-0 z-20 w-[125%] sm:w-auto md:-bottom-6 md:left-0 md:right-auto">
 		<img
 			src="/assets/img/section-shape-pink.svg"
-			class="md:-scale-x-100 transform"
+			class="transform md:-scale-x-100"
 			alt="shape image"
 		/>
 	</div>
@@ -553,7 +561,8 @@ layout: "layouts/base.html"
 							<a
 								href="/"
 								class="xl:btn xl:btn-primary text-h-5 font-bold text-pink underline xl:no-underline"
-								> <span class="xl:!px-10 btn-content">Lees verder</span></a
+							>
+								<span class="btn-content xl:!px-10">Lees verder</span></a
 							>
 						</div>
 					</div>
@@ -582,7 +591,8 @@ layout: "layouts/base.html"
 							<a
 								href="/"
 								class="xl:btn xl:btn-primary text-h-5 font-bold text-pink underline xl:no-underline"
-								> <span class="xl:!px-10 btn-content">Lees verder</span></a
+							>
+								<span class="btn-content xl:!px-10">Lees verder</span></a
 							>
 						</div>
 					</div>
@@ -611,7 +621,8 @@ layout: "layouts/base.html"
 							<a
 								href="/"
 								class="xl:btn xl:btn-primary text-h-5 font-bold text-pink underline xl:no-underline"
-								> <span class="xl:!px-10 btn-content">Lees verder</span></a
+							>
+								<span class="btn-content xl:!px-10">Lees verder</span></a
 							>
 						</div>
 					</div>
@@ -639,7 +650,8 @@ layout: "layouts/base.html"
 							<a
 								href="/"
 								class="xl:btn xl:btn-primary text-h-5 font-bold text-pink underline xl:no-underline"
-								> <span class="xl:!px-10 btn-content">Lees verder</span></a
+							>
+								<span class="btn-content xl:!px-10">Lees verder</span></a
 							>
 						</div>
 					</div>
@@ -650,10 +662,8 @@ layout: "layouts/base.html"
 			<a
 				href="/"
 				class="btn btn-primary mt-11 md:mt-7"
-				>
-				<span class="btn-content !px-12">
-					Bekijk al het nieuws
-				</span></a
+			>
+				<span class="btn-content !px-12"> Bekijk al het nieuws </span></a
 			>
 		</div>
 	</div>
@@ -697,10 +707,9 @@ layout: "layouts/base.html"
 				<a
 					href="/"
 					class="btn btn-primary mt-7"
-					>
-					<span class="btn-content !px-15">Plan jouw gratis intake</span>
-					</a
 				>
+					<span class="btn-content !px-15">Plan jouw gratis intake</span>
+				</a>
 			</div>
 			<span class="ml-18 mr-12 hidden h-auto w-px bg-white/60 lg:block xl:ml-32 xl:mr-24 2xl:ml-36 2xl:mr-28"></span>
 			<div class="w-full lg:w-1/2">
@@ -745,7 +754,7 @@ layout: "layouts/base.html"
 		</div>
 		<div class="relative z-20 flex flex-col justify-between gap-7 sm:gap-10 lg:gap-16 xl:flex-row xl:gap-24 2xl:gap-48">
 			<div
-				class="relative flex h-[21rem] w-full items-end rounded-[15px] md:rounded-[50px] bg-cover bg-center bg-no-repeat sm:h-[30rem] md:h-[40rem] xl:h-auto xl:w-1/2 xl:px-[59px] xl:pb-[51px] 2xl:w-[54%]"
+				class="relative flex h-[21rem] w-full items-end rounded-[15px] bg-cover bg-center bg-no-repeat sm:h-[30rem] md:h-[40rem] md:rounded-[50px] xl:h-auto xl:w-1/2 xl:px-[59px] xl:pb-[51px] 2xl:w-[54%]"
 				style="background-image: url(/assets/img/bg-cta-home.jpg)"
 			>
 				<div
@@ -842,34 +851,46 @@ layout: "layouts/base.html"
 				</div>
 				<form class="pt-7 md:pt-11">
 					<div class="pb-[18px] lg:pb-[22px]">
-						<label for="naam" class="flex items-center text-lg/[25px] text-[#7a7a7a] md:mb-2">
+						<label
+							for="naam"
+							class="flex items-center text-lg/[25px] text-[#7a7a7a] md:mb-2"
+						>
 							<span class="mr-2 rounded-full bg-pink p-1 md:p-1.5"></span>Naam:</label
 						>
 						<input
 							type="text"
-							class="focus:border-[#d4d4d4] focus:ring-0 focus:outline-none block w-full rounded-[15px] border border-solid border-transparent bg-white px-8 py-[22px] text-lg/[25px] text-black lg:rounded-[40px]"
+							class="block w-full rounded-[15px] border border-solid border-transparent bg-white px-8 py-[22px] text-lg/[25px] text-black focus:border-[#d4d4d4] focus:outline-none focus:ring-0 lg:rounded-[40px]"
 						/>
 					</div>
 					<div class="pb-[18px] lg:pb-[22px]">
-						<label for="e-mailadres" class="flex items-center text-lg/[25px] text-[#7a7a7a] md:mb-2">
+						<label
+							for="e-mailadres"
+							class="flex items-center text-lg/[25px] text-[#7a7a7a] md:mb-2"
+						>
 							<span class="mr-2 rounded-full bg-pink p-1 md:p-1.5"></span>E-mailadres:</label
 						>
 						<input
 							type="text"
-							class="focus:border-[#d4d4d4] focus:ring-0 focus:outline-none block w-full rounded-[15px] border border-solid border-transparent bg-white px-8 py-[22px] text-lg/[25px] text-black lg:rounded-[40px]"
+							class="block w-full rounded-[15px] border border-solid border-transparent bg-white px-8 py-[22px] text-lg/[25px] text-black focus:border-[#d4d4d4] focus:outline-none focus:ring-0 lg:rounded-[40px]"
 						/>
 					</div>
 					<div class="pb-[18px] lg:pb-[22px]">
-						<label for="telefoonnummer" class="flex items-center text-lg/[25px] text-[#7a7a7a] md:mb-2">
+						<label
+							for="telefoonnummer"
+							class="flex items-center text-lg/[25px] text-[#7a7a7a] md:mb-2"
+						>
 							<span class="mr-2 rounded-full bg-pink p-1 md:p-1.5"></span>Telefoonnummer:</label
 						>
 						<input
 							type="text"
-							class="focus:border-[#d4d4d4] focus:ring-0 focus:outline-none block w-full rounded-[15px] border border-solid border-transparent bg-white px-8 py-[22px] text-lg/[25px] text-black lg:rounded-[40px]"
+							class="block w-full rounded-[15px] border border-solid border-transparent bg-white px-8 py-[22px] text-lg/[25px] text-black focus:border-[#d4d4d4] focus:outline-none focus:ring-0 lg:rounded-[40px]"
 						/>
 					</div>
 					<div class="pb-[11px] lg:pb-[19px]">
-						<label for="Bericht" class="flex items-center text-lg/[25px] text-[#7a7a7a] md:mb-2">
+						<label
+							for="Bericht"
+							class="flex items-center text-lg/[25px] text-[#7a7a7a] md:mb-2"
+						>
 							<span class="mr-2 rounded-full bg-pink p-1 md:p-1.5"></span>Bericht:</label
 						>
 						<textarea
@@ -877,12 +898,14 @@ layout: "layouts/base.html"
 							id=""
 							cols="30"
 							rows="3"
-							class="focus:border-[#d4d4d4] focus:ring-0 focus:outline-none block w-full rounded-[15px] border border-solid border-transparent bg-white px-8 py-[22px] text-lg/[25px] text-black lg:rounded-[40px]"
+							class="block w-full rounded-[15px] border border-solid border-transparent bg-white px-8 py-[22px] text-lg/[25px] text-black focus:border-[#d4d4d4] focus:outline-none focus:ring-0 lg:rounded-[40px]"
 						></textarea>
 					</div>
 					<div class="flex flex-col-reverse gap-7 md:flex-row md:gap-12">
 						<div>
-							<button class="btn btn-primary shrink-0"><span class="btn-content px-[3rem] md:!px-[3.25rem]">Verzenden</span></button>
+							<button class="btn btn-primary shrink-0">
+								<span class="btn-content px-[3rem] md:!px-[3.25rem]">Verzenden</span>
+							</button>
 						</div>
 						<span class="text-sm/[22px] text-[#7a7a7a]"
 							>Met het versturen van deze gegevens ga je akkoord met onze
