--- a/src/pages/post.njk
+++ b/src/pages/post.njk
@@ -11,22 +11,20 @@ layout: "layouts/base.html"
 	<div class="absolute -bottom-3 left-auto right-0 z-20 w-[105%] sm:w-auto md:-bottom-6 md:left-0 md:right-auto">
 		<img
 			src="/assets/img/section-shape-off-white.svg"
-			class="transform -scale-x-100"
+			class="-scale-x-100 transform"
 			alt="shape image"
 		/>
 	</div>
 </div>
 <div class="bg-off-white">
-	<div class="container pb-[111px]  md:pb-20 pt-6 xl:pt-12">
+	<div class="container pb-[111px] pt-6 md:pb-20 xl:pt-12">
 		<div class="xl:px-20 2xl:px-40">
 			<div class="pb-24">
-				<span class="flex flex-col-reverse sm:flex-row justify-center items-baseline">
+				<span class="flex flex-col-reverse items-baseline justify-center sm:flex-row">
 					<span>
-						<h3 class="text-h-4 md:text-h-3 xl:text-h-2 font-bold text-black">
-							Onze behandelingen
-						</h3>
+						<h3 class="text-h-4 md:text-h-3 xl:text-h-2 font-bold text-black">Onze behandelingen</h3>
 					</span>
-					<span class="block pb-1 sm:pb-4 mx-auto sm:mx-0">
+					<span class="mx-auto block pb-1 sm:mx-0 sm:pb-4">
 						<img
 							src="/assets/img/icon-green-stars.png"
 							class="h-[60px]"
@@ -34,24 +32,61 @@ layout: "layouts/base.html"
 						/>
 					</span>
 				</span>
-				<div class="flex flex-col sm:flex-row justify-center items-center gap-1 sm:gap-8 pt-[18px] md:pt-7">
-					<span class="text-h-5 text-[#868686] italic">01 Januari 2023</span>
-					<span class="text-h-5 text-[#868686] italic">Geschreven door Claudia Jacobs.</span>
+				<div class="flex flex-col items-center justify-center gap-1 pt-[18px] sm:flex-row sm:gap-8 md:pt-7">
+					<span class="text-h-5 italic text-[#868686]">01 Januari 2023</span>
+					<span class="text-h-5 italic text-[#868686]">Geschreven door Claudia Jacobs.</span>
 				</div>
-				<div class="prose max-w-[790px] mx-auto pt-12 md:pt-7 prose-p:text-lg/[32px] prose-strong:text-pink prose-strong:font-bold prose-strong:italic prose:text-black prose-h1:text-h-3 md:prose-h1:text-h-2 2xl:prose-h1:text-h-1 prose-h2:text-h-4 md:prose-h2:text-h-3 xl:prose-h2:text-h-2 prose-h3:text-h-4  2xl:prose-h3:text-h-3 prose-h4:text-2xl xl:prose-h4:text-h-4">
-					<p>Lorem ipsum <strong>dolor sit amet, consetetur sadipscing elitr, sed diam</strong> nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet</p>
-					<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt <strong>ut labore</strong> et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam </p>
-					<p>	voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-					<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, <strong>sed diam nonumy eirmod tempor invidunt</strong> ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et <strong>accusam</strong> et justo duo <strong>dolores et ea rebum</strong>. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem</p>
+				<div
+					class="prose:text-black prose-h1:text-h-3 md:prose-h1:text-h-2 2xl:prose-h1:text-h-1 prose-h2:text-h-4 md:prose-h2:text-h-3 xl:prose-h2:text-h-2 prose-h3:text-h-4 2xl:prose-h3:text-h-3 xl:prose-h4:text-h-4 prose mx-auto max-w-[790px] pt-12 prose-h4:text-2xl prose-p:text-lg/[32px] prose-strong:font-bold prose-strong:italic prose-strong:text-pink md:pt-7"
+				>
+					<p>
+						Lorem ipsum <strong>dolor sit amet, consetetur sadipscing elitr, sed diam</strong> nonumy eirmod tempor
+						invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
+						dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+						Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+						dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
+						clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet
+					</p>
+					<p>
+						Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt
+						<strong>ut labore</strong> et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo
+						duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+						Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+						dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
+						clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+						consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+						sed diam
+					</p>
+					<p>
+						voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea
+						takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+						sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
+						eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+						Lorem ipsum dolor sit amet.
+					</p>
+					<p>
+						Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+						<strong>sed diam nonumy eirmod tempor invidunt</strong> ut labore et dolore magna aliquyam erat, sed diam
+						voluptua. At vero eos et <strong>accusam</strong> et justo duo <strong>dolores et ea rebum</strong>. Stet
+						clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem
+					</p>
 				</div>
 			</div>
 			<div>
-				<h3 class="text-h-4 font-bold text-center">Bekijk ook</h3>
-				<div class="flex w-full gap-2 overflow-auto whitespace-nowrap pr-4 xl:pr-0 pt-5 xl:grid xl:grid-cols-3 xl:gap-4">
+				<h3 class="text-h-4 text-center font-bold">Bekijk ook</h3>
+				<div
+					class="flex w-full gap-2 overflow-auto whitespace-nowrap pr-4 pt-5 xl:grid xl:grid-cols-3 xl:gap-4 xl:pr-0"
+				>
 					{% for item in range(0,3) %}
-					<div class="flex w-[90%] sm:w-5/6 md:w-[45%] lg:w-2/5 xl:w-full shrink-0 flex-col whitespace-normal bg-white rounded-[25px] px-[18px] md:px-5 pt-[18px] pb-[18px] md:pb-5">
+					<div
+						class="flex w-[90%] shrink-0 flex-col whitespace-normal rounded-[15px] bg-white px-[18px] pb-[18px] pt-[18px] sm:w-5/6 md:w-[45%] md:rounded-[25px] md:px-5 md:pb-5 lg:w-2/5 xl:w-full"
+					>
 						<span>
-							<img src="/assets/img/services-{{ loop.index }}.jpg" class="rounded-[25px] h-[201px] md:h-[287px] w-full object-cover" alt="botox image">
+							<img
+								src="/assets/img/services-{{ loop.index }}.jpg"
+								class="h-[201px] w-full rounded-[5px] object-cover md:h-[287px] md:rounded-[10px]"
+								alt="botox image"
+							/>
 						</span>
 						<div class="pt-4 md:pt-6">
 							<h3 class="pb-4 text-xl/[26px] font-bold xl:text-2xl/[32px]">Nieuwsbericht #1</h3>
@@ -63,10 +98,8 @@ layout: "layouts/base.html"
 								<a
 									href="/"
 									class="btn btn-primary !bg-[#e5055b]"
-									>
-									<span class="btn-content md:!px-10">
-										Lees verder
-									</span></a
+								>
+									<span class="btn-content md:!px-10"> Lees verder </span></a
 								>
 							</div>
 						</div>
@@ -77,9 +110,7 @@ layout: "layouts/base.html"
 					<a
 						href="/"
 						class="btn btn-primary"
-						><span class="btn-content text-center md:!px-10">
-							Terug naar nieuwsoverzicht
-						</span></a
+						><span class="btn-content text-center md:!px-10"> Terug naar nieuwsoverzicht </span></a
 					>
 				</div>
 			</div>
