--- a/src/pages/about.njk
+++ b/src/pages/about.njk
@@ -7,7 +7,7 @@ layout: "layouts/base.html"
 <div class="relative overflow-hidden">
 	<img
 		src="/assets/img/bg-cta-home.jpg"
-		class="h-[394px] w-full object-cover object-[50%_8%] sm:h-[440px] md:h-[490px] lg:h-[550px] xl:h-[738px]"
+		class="h-[394px] w-full object-cover object-[50%_-88%] sm:h-[440px] md:h-[490px] lg:h-[550px] lg:object-[50%_8%] xl:h-[738px]"
 		alt=""
 	/>
 	<div class="absolute -bottom-3 left-auto right-0 z-20 w-[125%] sm:w-auto md:-bottom-6 md:left-0 md:right-auto">
