--- a/src/pages/blog.njk
+++ b/src/pages/blog.njk
@@ -35,11 +35,15 @@ layout: "layouts/base.html"
 				</span>
 				<span class="text-h-5 block pt-4 text-black xl:pt-7">Het laatste nieuws rondom fillers, botox en PMU</span>
 			</div>
-			<div class="pt-7 md:pt-12 lg:pt-16 xl:pt-20 grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-7 md:gap-4">
+			<div class="grid grid-cols-1 gap-7 pt-7 md:grid-cols-2 md:gap-4 md:pt-12 lg:pt-16 xl:grid-cols-3 xl:pt-20">
 				{% for item in range(0,12) %}
-				<div class="bg-white rounded-[15px] md:rounded-[25px] px-[18px] md:px-5 pt-[18px] pb-[18px] md:pb-5">
+				<div class="rounded-[15px] bg-white px-[18px] pb-[18px] pt-[18px] md:rounded-[25px] md:px-5 md:pb-5">
 					<span>
-						<img src="/assets/img/services-{{ loop.index }}.jpg" class="rounded-[5px] md:rounded-[10px] h-[225px] md:h-[287px] w-full object-cover" alt="botox image">
+						<img
+							src="/assets/img/services-{{ loop.index }}.jpg"
+							class="h-[225px] w-full rounded-[5px] object-cover md:h-[287px] md:rounded-[10px]"
+							alt="botox image"
+						/>
 					</span>
 					<div class="pt-4 md:pt-6">
 						<h3 class="pb-4 text-xl/[26px] font-bold xl:text-2xl/[32px]">Nieuwsbericht #1</h3>
@@ -51,39 +55,15 @@ layout: "layouts/base.html"
 							<a
 								href="/"
 								class="btn btn-primary !bg-[#e5055b]"
-								>
-								<span class="btn-content md:!px-10">
-									Lees verder
-								</span>
-								</a
 							>
+								<span class="btn-content md:!px-10"> Lees verder </span>
+							</a>
 						</div>
 					</div>
 				</div>
 				{% endfor %}
-
 			</div>
-			<div class="flex items-center justify-between gap-5 pt-7">
-				<a href="/" class="block h-[70px]">
-					<img
-						src="/assets/img/icon-arrow-left.png"
-						class="h-[70px]"
-						alt="arrow left"
-					/>
-				</a>
-				<span class="hidden items-center gap-12 lg:flex">
-					<a href="/" class="text-h-5 block font-bold text-black">1</a>
-					<a href="/" class="text-h-5 block font-bold text-black">2</a>
-					<a href="/" class="text-h-5 block font-bold text-black">3</a>
-				</span>
-				<a href="/" class="block h-[70px]">
-					<img
-						src="/assets/img/icon-arrow-left.png"
-						class="h-[70px] rotate-180 transform"
-						alt="arrow right"
-					/>
-				</a>
-			</div>
+			{% include 'partials/pagination.html' %}
 		</div>
 	</div>
 </div>
