--- a/src/pages/home.njk
+++ b/src/pages/home.njk
@@ -441,7 +441,7 @@ layout: "layouts/base.html"
 			<span class="w-1/2">
 				<img
 					src="assets/img/testimonial-01.jpg"
-					class="effect-3d-image h-[235px] rounded-[15px] object-cover sm:h-[450px] md:rounded-[50px] lg:h-[552px]"
+					class="effect-3d-image h-[235px] w-[95%] md:w-auto rounded-[15px] object-cover sm:h-[450px] md:rounded-[50px] lg:h-[552px]"
 					alt="image"
 				/>
 			</span>
@@ -449,7 +449,7 @@ layout: "layouts/base.html"
 				<span class="block pt-[53px]">
 					<img
 						src="assets/img/testimonial-02.jpg"
-						class="effect-3d-image h-[235px] rounded-[15px] object-cover sm:h-[450px] md:rounded-[50px] lg:h-[552px]"
+						class="effect-3d-image h-[235px] w-[95%] md:w-auto rounded-[15px] object-cover sm:h-[450px] md:rounded-[50px] lg:h-[552px]"
 						alt="image"
 					/>
 				</span>
