--- a/src/_includes/partials/header.html
+++ b/src/_includes/partials/header.html
@@ -1,5 +1,5 @@
 <div
-	class="fixed inset-x-0 top-0 z-[999] transition-colors duration-500 ease-in-out"
+	class="absolute inset-x-0 top-0 z-[99] transition-colors duration-500 ease-in-out"
 	:class="{
 			'bg-pink-medium': $store.mobileMenu.isOpen
 	}"
@@ -25,7 +25,16 @@
 						class="btn-content"
 						:class="{ 'active': $store.desktopMenu.isOpen }"
 					>
-						Menu
+						<span
+							x-show="!$store.desktopMenu.isOpen"
+							x-cloak
+							>Menu</span
+						>
+						<span
+							x-show="$store.desktopMenu.isOpen"
+							x-cloak
+							>Sluiten</span
+						>
 					</span>
 				</button>
 			</div>
@@ -35,7 +44,7 @@
 
 <button
 	@click="$store.mobileMenu.toggle()"
-	class="fixed bottom-6 right-4 z-[60] flex h-14 w-14 items-center justify-center rounded-full bg-pink md:bottom-3.5 lg:hidden"
+	class="fixed bottom-6 right-4 z-[101] flex h-14 w-14 items-center justify-center rounded-full bg-pink md:bottom-3.5 lg:hidden"
 >
 	<svg
 		xmlns="http://www.w3.org/2000/svg"
@@ -72,13 +81,24 @@
 </button>
 
 <div
-	class="fixed inset-0 z-50 h-screen w-full translate-y-full overflow-auto bg-pink-medium transition-transform duration-500 ease-in-out lg:hidden"
+	class="fixed inset-0 z-[100] h-screen w-full translate-y-full overflow-auto bg-pink-medium transition-transform duration-500 ease-in-out lg:hidden"
 	:class="{
         '!translate-y-0': $store.mobileMenu.isOpen
     }"
 >
 	<div class="container pb-8">
-		<p class="mx-auto mt-48 max-w-[320px] text-center text-xl font-bold text-white">
+		<a
+			href="/"
+			class="mx-auto mt-14 flex justify-center"
+		>
+			<img
+				src="/assets/img/logo-footer.svg"
+				class="h-24"
+				alt="logo"
+			/>
+		</a>
+
+		<p class="mx-auto mt-14 max-w-[320px] text-center text-xl font-bold text-white">
 			Jouw beautygeheim heet <span class="text-lime">FillerHouse</span>
 		</p>
 
